[package]
name = "cargoman"
description = "small command line tool to programmatically manipulate Cargo.toml files"
license = "MIT OR Apache-2.0"

version = "0.2.1"
edition = "2018"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/.github/", "/rustfmt.toml"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "toml", "manipulate", "cli"]
repository = "https://github.com/ironthree/cargoman"

[dependencies]
indexmap = { version = "1.6.0", features = ["serde-1"] }
parse_cfg = "^2.0.0"
serde = { version = "^1.0.117", features = ["derive"] }
structopt = { version = "^0.3.18", features = ["wrap_help"] }
toml = { version = "^0.5.7", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

